...
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/margin"
            android:scaleType="fitCenter"
            android:src="@drawable/fork"
            app:layout_constraintBottom_toTopOf="@id/search_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/colorPrimaryVariant" />

        <EditText
            android:id="@+id/search_box"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_margin"
            android:elevation="@dimen/margin"
            android:src="@drawable/magnify"
            app:layout_constraintBottom_toBottomOf="@id/search_box"
...
